--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -16,7 +16,7 @@
         <ImageView
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:src="@mipmap/ic_launcher"
+            android:src="@drawable/logo"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="32dp"/>
 
@@ -80,32 +80,41 @@
             android:id="@+id/btn_signup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/purple_500"
+            android:backgroundTint="#FB0B0B"
             android:textColor="@android:color/white"
             android:text="Sign Up"
             android:layout_marginTop="16dp"/>
 
+    </LinearLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
         <Button
             android:id="@+id/btn_resetpassword"
             style="@style/Widget.MaterialComponents.Button.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@null"
+            android:textColor="#FB0B0B"
             android:text="Forgot your password?"
-            android:textAllCaps="false"
-            android:layout_gravity="center_horizontal"/>
+            app:layout_constraintEnd_toEndOf="@id/btn_signin"
+            app:layout_constraintBottom_toTopOf="@id/btn_signin"
+            android:textAllCaps="false"/>
 
         <Button
             android:id="@+id/btn_signin"
             style="@style/Widget.MaterialComponents.Button.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="#FB0B0B"
             android:background="@null"
-            android:text="Already registered. Login Me!"
-            android:textAllCaps="false"
-            android:layout_gravity="center_horizontal"/>
-
-    </LinearLayout>
+            android:text="Have an account? Login Here!"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_margin="24dp"
+            android:textAllCaps="false"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ProgressBar
         android:id="@+id/progressBar"
