--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -49,12 +49,13 @@
                 android:layout_marginStart="10dp"/>
 
 
-
+            <include layout="@layout/item_makanan"/>
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_makanan"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     tools:listitem="@layout/item_makanan"/>
+
 
 
         </androidx.appcompat.widget.LinearLayoutCompat>
