--- a/app/src/main/res/layout/activity_confirm_order.xml
+++ b/app/src/main/res/layout/activity_confirm_order.xml
@@ -103,6 +103,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_height="50dp">
             <Button
+                android:id="@+id/btn_back"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="Back to Home"
